# ftpupload

./: CMakeLists.txt  README.md  config.c  config.h  curlftp.c  curlftp.h  def.h  log.c  log.h  main.c  notify.c  notify.h
conf/: example.conf
